--- a/src/content/descriptions/aose.mdx
+++ b/src/content/descriptions/aose.mdx
@@ -2,5 +2,15 @@
 author: "csvitor-dev"
 ---
 
-`aOSE` is a personal project, which I want to expand this vision to other interested parties, **so that they can
-contribute to it** 😄!
+O `aOSE` é um projeto pessoal que reflete uma perspectiva de minha autoria sobre o **desenvolvimento de software** 🧑‍💻 e a própria **Engenharia de Software** ⚙️, com a tentativa de expôr com maior clareza as entrelinhas da nossa área -- o que, muito das vezes, passa despercido no _mainstream_.
+
+<br />
+
+🤔 Então, qual seria o propósito de tal projeto e, inclusive, deste blog? De
+forma **simples** e objetiva, toda e qualquer atividade realizada por meio deste
+projeto, tem por intenção compartilhar conhecimento e contribuição para com
+outros projetos **_open-source_** 🔐!
+
+<br />
+
+**Tento explicar melhor <a class="underline hover:text-[#5f8dff]" href="https://github.com/An-Ordinary-Software-Engineering/.github/blob/main/profile/README.md" rel="external" >aqui</a>!**
