--- a/src/content/descriptions/csvitor-dev.mdx
+++ b/src/content/descriptions/csvitor-dev.mdx
@@ -2,7 +2,12 @@
 author: "csvitor-dev"
 ---
 
-I'm a *backend developer* 🗄️, focusing on the **.NET environment**. However, I have been studying other technologies and
-languages for a long time, whether in the *backend* or *frontend* 🖥️ (which could be considered a *fullstack* 🔗).
-Despite this, my greatest appreciation lies in the entirety of development, that is, before that: **the software processes
-and its life cycle** 📊. Therefore, I can say that I am an admirer of *software engineering* ⚙️ and its disciplines!
+👋 Olá, meu nome é Vitor Costa, tenho 21 anos e estou graduando em **_Engenharia de Software_** ⚙️. Apesar de apreciar bastante o _desenvolvimento de software_, creio que existem etapas que pelas quais devemos dedicar mais tempo, principalmente na modelagem do negócio.
+
+<br />
+
+Sou um **_desenvolvedor backend_** 🗄️, com foco no ambiente **.NET**. No entanto, venho estudando outras tecnologias e linguagens há bastante tempo, seja no _backend_ ou no _frontend_ 🖥️ (o que poderia ser considerado um _fullstack_ 🔗).
+
+<br />
+
+Mas como eu já havia dito, minha maior apreciação está na **totalidade do desenvolvimento**, ou seja, antes disso: _os processos de software e seu ciclo de vida_ 📊. Por isso, posso dizer que sou um admirador da **Engenharia de Software** e suas disciplinas!
