style: adding an 'undefined' image

--- a/src/content/posts/second.mdx
+++ b/src/content/posts/second.mdx
@@ -1,15 +1,8 @@
 ---
 difficulty: "medium"
-title: "Mastering the Art of Mountain Hiking"
+title: "Lorem ipsum dolor sit amet, consectetur adipiscing elit"
 link: https://example.com/post2
 heroImg:
-  {
-    src: https://www.csharp411.com/wp-content/uploads/2023/03/word-image-720-1.png,
-    alt: "A challenging mountain trail",
-  }
-description: "Learn how to prepare and navigate challenging mountain trails with confidence."
+  { src: /images/card/undefined.png, alt: "A challenging mountain trail" }
+description: "Maecenas lorem magna, euismod in erat in, commodo pharetra velit. Vivamus rutrum neque eu tortor lobortis rutrum."
 ---
-
-<h4>
-  Learn how to prepare and navigate challenging mountain trails with confidence.
-</h4>
