--- a/src/content/posts/third.mdx
+++ b/src/content/posts/third.mdx
@@ -1,10 +1,7 @@
 ---
 difficulty: "hard"
-title: "Advanced Concepts in Web Development"
+title: "Lorem ipsum dolor sit amet, consectetur adipiscing elit"
 link: https://example.com/post3
-heroImg: {
-    src: https://blog.safetycontrol.ind.br/wp-content/uploads/2021/11/Docker.png,
-    alt: "A complex web of code"
-}
-description: "Dive deep into advanced web development techniques and improve your coding skills."
+heroImg: { src: /images/card/undefined.png, alt: "A complex web of code" }
+description: "Maecenas lorem magna, euismod in erat in, commodo pharetra velit. Vivamus rutrum neque eu tortor lobortis rutrum."
 ---
