--- a/src/content/posts/first.mdx
+++ b/src/content/posts/first.mdx
@@ -1,12 +1,7 @@
 ---
 difficulty: "easy"
-title: "Exploring the Tranquility of Nature"
+title: "Lorem ipsum dolor sit amet, consectetur adipiscing elit"
 link: https://example.com/post1
-heroImg: {
-    src: https://cdn.thexcodes.com/imgs/reactJS.png,
-    alt: "A peaceful nature scene"
-}
-description: "An introductory guide to finding peace and relaxation in nature."
+heroImg: { src: /images/card/undefined.png, alt: "A peaceful nature scene" }
+description: "Maecenas lorem magna, euismod in erat in, commodo pharetra velit. Vivamus rutrum neque eu tortor lobortis rutrum."
 ---
-
-<h4>An introductory guide to finding peace and relaxation in nature.</h4>
