chore: cleaning up author descriptions

--- a/src/content/descriptions/aose.mdx
+++ b/src/content/descriptions/aose.mdx
@@ -2,14 +2,14 @@
 author: "csvitor-dev"
 ---
 
-O `aOSE` é um projeto pessoal que reflete uma perspectiva de minha autoria sobre o **desenvolvimento de software** 🧑‍💻 e a própria **Engenharia de Software** ⚙️, com a tentativa de expôr com maior clareza as entrelinhas da nossa área -- o que, muito das vezes, passa despercido no _mainstream_.
+⚙️ O `aOSE` é um projeto pessoal que reflete uma perspectiva de minha autoria sobre o **desenvolvimento de software** e a própria **Engenharia de Software**, com a tentativa de expôr com maior clareza as entrelinhas da nossa área -- o que, muito das vezes, passa despercido no _mainstream_.
 
 <br />
 
-🤔 Então, qual seria o propósito de tal projeto e, inclusive, deste blog? De
+Então, qual seria o propósito de tal projeto e, inclusive, deste blog? De
 forma **simples** e objetiva, toda e qualquer atividade realizada por meio deste
 projeto, tem por intenção compartilhar conhecimento e contribuição para com
-outros projetos **_open-source_** 🔐!
+outros projetos **_open-source_**!
 
 <br />
 
