--- a/src/content/descriptions/csvitor-dev.mdx
+++ b/src/content/descriptions/csvitor-dev.mdx
@@ -2,12 +2,12 @@
 author: "csvitor-dev"
 ---
 
-👋 Olá, meu nome é Vitor Costa, tenho 21 anos e estou graduando em **_Engenharia de Software_** ⚙️. Apesar de apreciar bastante o _desenvolvimento de software_, creio que existem etapas que pelas quais devemos dedicar mais tempo, principalmente na modelagem do negócio.
+⚙️ Olá, meu nome é Vitor Costa, tenho 21 anos e estou graduando em **_Engenharia de Software_**. Apesar de apreciar bastante o _desenvolvimento de software_, creio que existem etapas que pelas quais devemos dedicar mais tempo, principalmente na modelagem do negócio.
 
 <br />
 
-Sou um **_desenvolvedor backend_** 🗄️, com foco no ambiente **.NET**. No entanto, venho estudando outras tecnologias e linguagens há bastante tempo, seja no _backend_ ou no _frontend_ 🖥️ (o que poderia ser considerado um _fullstack_ 🔗).
+Sou um **_desenvolvedor backend_**, com foco no ambiente **.NET**. No entanto, venho estudando outras tecnologias e linguagens há bastante tempo, seja no _backend_ ou no _frontend_ (o que poderia ser considerado um _fullstack_).
 
 <br />
 
-Mas como eu já havia dito, minha maior apreciação está na **totalidade do desenvolvimento**, ou seja, antes disso: _os processos de software e seu ciclo de vida_ 📊. Por isso, posso dizer que sou um admirador da **Engenharia de Software** e suas disciplinas!
+Mas como eu já havia dito, minha maior apreciação está na **totalidade do desenvolvimento**, ou seja, antes disso: _os processos de software e seu ciclo de vida_. Por isso, posso dizer que sou um admirador da **Engenharia de Software** e suas disciplinas!
