chore: adding content in '.mdx' files

--- a/src/content/posts/first.mdx
+++ b/src/content/posts/first.mdx
@@ -5,3 +5,5 @@ link: https://example.com/post1
 heroImg: { src: /images/card/undefined.png, alt: "A peaceful nature scene" }
 description: "Maecenas lorem magna, euismod in erat in, commodo pharetra velit. Vivamus rutrum neque eu tortor lobortis rutrum."
 ---
+
+<h4>First</h4>
