refactor: propagating changes

--- a/src/content/posts/first.mdx
+++ b/src/content/posts/first.mdx
@@ -2,6 +2,7 @@
 difficulty: "easy"
 title: "Lorem ipsum dolor sit amet, consectetur adipiscing elit"
 heroImg: { src: /images/card/undefined.png, alt: "A peaceful nature scene" }
+meta: "Something"
 description: "Maecenas lorem magna, euismod in erat in, commodo pharetra velit. Vivamus rutrum neque eu tortor lobortis rutrum."
 ---
 
