--- a/src/content/posts/second.mdx
+++ b/src/content/posts/second.mdx
@@ -3,6 +3,7 @@ difficulty: "medium"
 title: "Lorem ipsum dolor sit amet, consectetur adipiscing elit"
 heroImg:
   { src: /images/card/undefined.png, alt: "A challenging mountain trail" }
+meta: "Something"
 description: "Maecenas lorem magna, euismod in erat in, commodo pharetra velit. Vivamus rutrum neque eu tortor lobortis rutrum."
 ---
 
